[package]
edition = "2021"
name = "pnpm_tarball-fetcher-rs"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["async", "napi4"] }
napi-derive = "2.12.2"
bytes = "1.4.0"
cacache = "11.6.0"
futures = "0.3.28"
libdeflater = "0.14.0"
miette = "5.9.0"
reqwest = "0.11.18"
serde_json = "1.0.96"
ssri = "9.0.0"
tar = "0.4.38"
tokio = { version = "1.28.2", features = ["full"] }
sanitize-filename = "0.4.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
